objects/ASI_CRM_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Base_Amount_For_Prompt_Payment__c</fullName>
        <label>Base Amount For Prompt Payment</label>
        <summarizedField>ASI_CRM_Invoice_Line_Item__c.ASI_CRM_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_Invoice_Line_Item__c.ASI_CRM_Consider_Prompt_Payment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Invoice_Line_Item__c.ASI_CRM_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Payment_Term__c</fullName>
        <formula>VALUE(  TEXT(ASI_CRM_Customer__r.ASI_CRM_SG_Payment_Terms_A_R__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Payment Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Document_Number__c</fullName>
        <label>Document Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Document_Type__c</fullName>
        <label>Document Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Generated_Prompt_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generated Prompt Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Gross_Amount__c</fullName>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Open_Amount__c</fullName>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Paid_In_Days__c</fullName>
        <formula>IF(ISBLANK( ASI_CRM_Payment_Date__c ),
  -1,
  ASI_CRM_Payment_Date__c - ASI_CRM_Invoice_Date__c 
)</formula>
        <label>Paid In (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Taxable_Amount__c</fullName>
        <label>Taxable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Document_Number__c</columns>
        <columns>ASI_CRM_Document_Type__c</columns>
        <columns>ASI_CRM_G_L_Date__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Gross_Amount__c</columns>
        <columns>ASI_CRM_Open_Amount__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_Invoices</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Document_Number__c</columns>
        <columns>ASI_CRM_Document_Type__c</columns>
        <columns>ASI_CRM_G_L_Date__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Gross_Amount__c</columns>
        <columns>ASI_CRM_Taxable_Amount__c</columns>
        <columns>ASI_CRM_Open_Amount__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_CRM_Generated_Prompt_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Invoice__c.ASI_CRM_SG_Invoice</value>
        </filters>
        <label>SG - Invoices</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Invoice</fullName>
        <active>true</active>
        <label>SG CRM Invoice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>